objects/WWSync_Setup__c.object
<CustomObject>
    <fields>
        <fullName>Email_Catcher_Contact_ID__c</fullName>
        <label>Email Catcher Contact ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>apex_notification_email__c</fullName>
        <label>apex notification email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>endpoint__c</fullName>
        <label>endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>payment_endpoint__c</fullName>
        <label>payment_endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>token__c</fullName>
        <label>token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>WWSync Setup</label>
</CustomObject>